A makeshift solution for something that should be fixed properly. For now this is it

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,111 +2,111 @@
 @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
 
 body {
-  height: auto;
-  min-height: 100%;
-  overflow-x: hidden;
-  padding: 0;
-  margin: 0%;
-  background-image: url('resources/hotel.jpeg');
-  background-color: #333333;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: white;
-  /*justify-content: center;*/
-  text-overflow: clip;
-  font-family: "Balsamiq Sans";
+	height: auto;
+	min-height: 100%;
+	overflow-x: hidden;
+	padding: 0;
+	margin: 0%;
+	background-image: url('resources/hotel.jpeg');
+	background-color: #333333;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: white;
+	/*justify-content: center;*/
+	text-overflow: clip;
+	font-family: "Balsamiq Sans";
 }
 
 img {
-  width: 30%;
-  height: 30%;
+	width: 30%;
+	height: 30%;
 }
 
 header{
-  background-color: black;
-  display: block;
-  margin: none;
-  padding: 1%;
+	background-color: black;
+	display: block;
+	margin: none;
+	padding: 1%;
 }
 
 h1{
-  margin: 0%;
+	margin: 0%;
 }
 
 .headcontain{
-  display: flex;
-  flex-flow: row wrap;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: center;
-  justify-content: space-between;
-  margin-left: 1%;
-  margin-right: 1%;
+	display: flex;
+	flex-flow: row wrap;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-content: center;
+	justify-content: space-between;
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
 .boutmebox{
-  display: flex;
-  flex-flow: row wrap;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: center;
-  justify-content: space-between;
-  margin-left: 1%;
-  margin-right: 1%;
-  width: 15.5%;
+	align-items: center;
+	align-self: center;
+	width: 20%;
+	text-align: center;
 }
 
 .boutme{
-  align-self: center;
-  cursor: pointer;
-  border: 2px solid white;
-  font-size: 60%;
-  padding: 1%;
-  border-radius: 10px;
-  height: 100%;
-  text-align: center;
-  align-items: center;
+	cursor: pointer;
+	border: 2px solid white;
+	font-size: 120%;
+	border-radius: 10px;
+	text-align: center;
+	display: inline;
+	width: 60%;
+	padding: 5% 2% 5% 2%;
+	margin: 0% 2%;
 }
 
 .boutme:hover{
-  background-color: white;
-  color: black;
-  border: 2px solid grey;
-  transition-duration: 1s;
+	background-color: white;
+	color: black;
+	border: 2px solid grey;
+	transition-duration: 1s;
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.65);
-  padding: 0% 0% 5% 0%;
-  margin: none;
+	background-color: rgba(0, 0, 0, 0.65);
+	padding: 5% 0% 5% 0%;
+	margin: none;
 }
 
 .introPara {
-  color: white;
+	color: white;
+	display: inline-block;
+	font-size: 100%;
+	margin: 0% 5% 3% 3%;
 }
 
 .secondPanel{
-  margin: 0% 5% 0% 5%;
+	margin: 0% 5% 0% 5%;
+	font-size: 120%;
 }
 
 .lastPanel{
-  display: block;
-  text-decoration: none;
-  border: none;
+	display: block;
+	text-decoration: none;
+	border: none;
 
 }
 .button{
-  padding: 1px;
-  border-radius: 12px;
-  margin: 0px 3%;
+	padding: 1px;
+	border-radius: 12px;
+	margin: 0px 3%;
 }
 .kaki{
-  text-align: center;
-  display: block;
-  background-color: #b5b5b5;
-  margin: none;
-  color: black
+	text-align: center;
+	display: block;
+	background-color: #828282;
+	margin: none;
+	color: black;
+	padding: 1%;
 }
 
 .articlepic{
@@ -117,16 +117,16 @@ align-self: center;
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
-  img {
-    width: 25%;
-    height: 25%;
-  }
-  .articlepic{
-    display: block;
-  }
+	img {
+		width: 25%;
+		height: 25%;
+	}
+	.articlepic{
+		display: block;
+	}
 }
 
 a{
-  text-decoration: none;
-  color: white;
+	text-decoration: none;
+	color: white;
 }
